--- a/static/client.html
+++ b/static/client.html
@@ -465,10 +465,10 @@ document.addEventListener('DOMContentLoaded', function() {
             }
 
             try {
-                const res = await fetch(`${BACKEND_API_BASE_URL}/api/client/feedback`, {
+                const res = await fetch(`${BACKEND_API_BASE_URL}/api/client/feedback/`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ log_id: logId, rating: rating })
+                    body: JSON.stringify({ feedback_id: logId, rating: rating })
                 });
 
                 if (!res.ok) {
