学生画面が公開キーを使えるように

--- a/static/admin.html
+++ b/static/admin.html
@@ -698,7 +698,7 @@
         const res = await fetch(`/api/client/feedback/`, { // 12/6末尾にスラッシュ追加 サーバー側の定義が /api/client/feedback/（末尾スラッシュあり）になっているのに、クライアントが /api/client/feedback（なし）にアクセスしているため
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ log_id: logId, rating: rating })
+            body: JSON.stringify({ feedback_id: logId, rating: rating })
         });
                 if(!res.ok) {
                     const errorData = await res.json();
