--- a/static/client.html
+++ b/static/client.html
@@ -13,9 +13,9 @@
     window.supabaseClient = null;
 
     async function initializeSupabase() {
-        try {
-            // ★変更点: 管理者用(admin)ではなく、学生用(client)のAPIを叩く
-            const response = await fetch('/api/client/chat/config'); 
+    try {
+        // ✅ 修正: /api/client/chat/config に変更
+        const response = await fetch('/api/client/chat/config');
         
         if (!response.ok) {
             console.error(`API Error: ${response.status}`);
@@ -23,24 +23,24 @@
         }
         
         const config = await response.json();
-            const SUPABASE_URL = config.supabase_url;
-            const SUPABASE_ANON_KEY = config.supabase_anon_key;
+        const SUPABASE_URL = config.supabase_url;
+        const SUPABASE_ANON_KEY = config.supabase_anon_key;
 
-            if (!SUPABASE_URL || !SUPABASE_ANON_KEY) {
-                console.error("Supabase設定エラー: 環境変数が取得できませんでした");
-                return;
-            }
-
-            // 初期化実行
-            window.supabaseClient = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-            console.log('Supabase初期化完了 (Render環境変数使用)');
-
-        } catch (error) {
-            console.error("Supabase初期化失敗:", error);
+        if (!SUPABASE_URL || !SUPABASE_ANON_KEY) {
+            console.error("Supabaseエラー: 環境変数が取得できませんでした");
+            return;
         }
-    }
 
-    initializeSupabase();
+        // 初期化実行
+        window.supabaseClient = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+        console.log('✅ Supabase初期化完了');
+
+    } catch (error) {
+        console.error("Supabase初期化失敗:", error);
+    }
+}
+
+initializeSupabase();
 </script>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
