統計画面へのボタン追加

--- a/static/admin.html
+++ b/static/admin.html
@@ -473,6 +473,13 @@
                         <div class="sync-status" id="embeddingSyncStatus">設定同期待機中...</div>
                     </div>
                 </div>
+                
+                <div class="panel-section">
+    <h3 class="section-title">📊 統計・分析</h3>
+    <button class="admin-tool-btn" onclick="location.href='stats.html'">
+        📈 統計ダッシュボードを開く
+    </button>
+</div>
 
                 <div class="panel-section">
                     <h3 class="section-title">📊 ドキュメント管理</h3>
