--- a/static/client.html
+++ b/static/client.html
@@ -46,276 +46,11 @@
         initializeSupabase();
     </script>
 
-    <style>
-        
-        /* --- 追加: 生成停止ボタンのスタイル --- */
-        .send-btn.generating {
-            background: #dc3545 !important; /* 赤色 (importantで強制) */
-            box-shadow: 0 4px 12px rgba(220, 53, 69, 0.3);
-        }
-        .send-btn.generating:hover {
-            background: #c82333 !important;
-            box-shadow: 0 6px 16px rgba(220, 53, 69, 0.4);
-        }
-/* --- ステータス表示アニメーション --- */
-.status-pulse {
-    display: inline-flex;
-    align-items: center;
-    color: #666;
-    font-size: 0.95rem;
-    font-weight: 500;
-    background: #f0f2f5;
-    padding: 8px 16px;
-    border-radius: 20px;
-    animation: pulse-bg 1.5s infinite alternate;
-}
-
-.status-pulse::before {
-    content: '';
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    background-color: #4facfe;
-    border-radius: 50%;
-    margin-right: 8px;
-    animation: blink 1s infinite;
-}
-
-@keyframes pulse-bg {
-    0% { background-color: #f0f2f5; }
-    100% { background-color: #e1e4e8; }
-}
-
-@keyframes blink {
-    0%, 100% { opacity: 1; }
-    50% { opacity: 0.4; }
-}
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); min-height: 100vh; padding: 20px; overflow-x: hidden; }
-        .container { max-width: 800px; margin: 0 auto; background: rgba(255, 255, 255, 0.98); border-radius: 25px; box-shadow: 0 30px 60px rgba(0, 0, 0, 0.15); overflow: hidden; display: flex; flex-direction: column; height: calc(100vh - 40px); }
-        .header { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 30px; text-align: center; position: relative; }
-        .header h1 { font-size: 2rem; margin-bottom: 10px; text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); }
-        .header .subtitle { font-size: 1rem; opacity: 0.9; }
-        .settings-indicator {
-            position: absolute;
-            top: 60px !important;
-            right: 15px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-size: 0.85rem;
-            background-color: #ffffff;
-            color: #333333;
-            border: 1px solid #e0e0e0;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            padding: 8px 12px;
-            border-radius: 15px;
-            z-index: 9;
-        }
-        .sync-dot { width: 8px; height: 8px; border-radius: 50%; background: #28a745; animation: pulse-dot 2s infinite; }
-        .sync-dot.disconnected { background: #dc3545; animation: none; }
-        @keyframes pulse-dot { 0%, 50% { opacity: 1; } 51%, 100% { opacity: 0.3; } }
-        .chat-container { display: flex; flex-direction: column; flex-grow: 1; background: white; overflow: hidden; position: relative; }
-        .chat-header { background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%); color: white; padding: 15px; text-align: center; font-weight: 600; font-size: 1.1rem; }
-        .chat-messages { flex: 1; padding: 20px; overflow-y: auto; display: flex; flex-direction: column; gap: 15px; }
-        .message { max-width: 80%; padding: 15px 20px; border-radius: 20px; position: relative; animation: slideIn 0.3s ease-out; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); }
-        @keyframes slideIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
-        .message.user { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; align-self: flex-end; margin-left: auto; }
-        .message.bot { background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); color: #333; align-self: flex-start; border-left: 4px solid #4facfe; }
-        .message-content { line-height: 1.6; white-space: pre-wrap; word-wrap: break-word; }
-        .message-content a { color: #007bff; text-decoration: underline; }
-        .message-content a:hover { color: #0056b3; }
-        .source-link { cursor: pointer; color: #007bff; text-decoration: underline; }
-        .source-link:hover { color: #0056b3; }
-        
-        /* --- 画像表示用モーダル --- */
-        .image-modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); display: flex; justify-content: center; align-items: center; z-index: 2000; opacity: 0; visibility: hidden; transition: all 0.3s; }
-        .image-modal-overlay.visible { opacity: 1; visibility: visible; }
-        .image-modal-content { position: relative; max-width: 90%; max-height: 90%; background: white; border-radius: 8px; padding: 20px; }
-        .image-modal-close { position: absolute; top: 10px; right: 10px; background: #dc3545; color: white; border: none; border-radius: 50%; width: 30px; height: 30px; cursor: pointer; font-size: 18px; font-weight: bold; }
-        .image-modal-close:hover { background: #c82333; }
-        .image-modal-image { max-width: 100%; max-height: 80vh; display: block; margin: 0 auto; }
-        .image-modal-loading { text-align: center; padding: 40px; color: #666; }
-        .image-modal-error { text-align: center; padding: 40px; color: #dc3545; }
-        .message-time { font-size: 0.8rem; opacity: 0.7; margin-top: 8px; }
-        .chat-input-container { padding: 20px; background: #f8f9fa; border-top: 1px solid #e9ecef; }
-        .chat-input-box { display: flex; gap: 10px; align-items: flex-end; }
-        .chat-input { flex: 1; padding: 15px; border: 2px solid #e9ecef; border-radius: 25px; font-size: 16px; outline: none; transition: all 0.3s ease; resize: none; min-height: 50px; max-height: 120px; }
-        .chat-input:focus { border-color: #4facfe; box-shadow: 0 0 0 3px rgba(79, 172, 254, 0.1); }
-        .send-btn { padding: 15px 25px; background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%); color: white; border: none; border-radius: 25px; cursor: pointer; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; gap: 8px; }
-        .send-btn:hover { transform: translateY(-2px); box-shadow: 0 8px 20px rgba(79, 172, 254, 0.3); }
-        .send-btn:disabled { opacity: 0.6; cursor: not-allowed; transform: none; }
-        .feedback-container { margin-top: 12px; padding-top: 8px; border-top: 1px solid #ddd; }
-        .feedback-btn { background: none; border: 1px solid #ccc; border-radius: 15px; padding: 3px 8px; margin-left: 8px; cursor: pointer; transition: all 0.2s ease; }
-        .feedback-btn:hover { background: #e9ecef; transform: scale(1.1); }
-        .loading-indicator { display: inline-block; width: 20px; height: 20px; border: 2px solid #f3f3f3; border-top: 2px solid #4facfe; border-radius: 50%; animation: spin 1s linear infinite; margin-right: 10px; }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-        .settings-update-notification { position: fixed; top: 20px; right: 20px; background: #28a745; color: white; padding: 15px 20px; border-radius: 10px; box-shadow: 0 4px 12px rgba(40, 167, 69, 0.3); z-index: 1000; transform: translateX(350px); transition: transform 0.3s ease; }
-        .settings-update-notification.show { transform: translateX(0); }
-        .settings-update-notification .close-btn { background: none; border: none; color: white; font-size: 18px; margin-left: 10px; cursor: pointer; }
-        .comment-btn {
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            background-color: #ffffff;
-            color: #333333;
-            border: 1px solid #e0e0e0;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            border-radius: 15px;
-            padding: 8px 12px;
-            cursor: pointer;
-            font-size: 0.85rem;
-            font-weight: bold;
-            transition: all 0.2s ease;
-            z-index: 10;
-        }
-
-        .comment-btn:hover {
-            background-color: #f2f2f2;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        }
-        .modal { display: none; position: fixed; z-index: 1001; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.5); animation: fadeIn 0.3s; }
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        .modal-content { background-color: #fefefe; margin: 15% auto; padding: 25px; border: 1px solid #888; width: 90%; max-width: 500px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); position: relative; animation: slideDown 0.3s; }
-        @keyframes slideDown { from { transform: translateY(-50px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
-        .modal-close-btn { color: #aaa; float: right; font-size: 28px; font-weight: bold; cursor: pointer; }
-        .modal-close-btn:hover, .modal-close-btn:focus { color: black; text-decoration: none; }
-        .modal h2 { margin-bottom: 15px; color: #333; }
-        .modal textarea { width: 100%; height: 120px; padding: 10px; border: 1px solid #ccc; border-radius: 8px; margin-top: 10px; margin-bottom: 20px; resize: vertical; font-size: 1rem; }
-        .modal button { width: 100%; padding: 12px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border: none; border-radius: 8px; cursor: pointer; font-size: 1rem; font-weight: 600; }
-        .modal button:hover { opacity: 0.9; }
-        .modal button:disabled { opacity: 0.5; cursor: not-allowed; }
-        .success-message { color: #28a745; font-weight: 600; margin-top: 10px; display: none; }
-        .error-message { color: #dc3545; font-weight: 600; margin-top: 10px; display: none; }
-
-        .warning-text { color: red; font-weight: bold; }
-        .theme-selector { margin-top: 20px; color: rgba(255, 255, 255, 0.9); font-size: 0.9rem; }
-        .theme-selector p { margin-bottom: 8px; }
-        .theme-selector div { display: flex; justify-content: center; gap: 15px; }
-        .theme-btn { width: 28px; height: 28px; border-radius: 50%; border: 2px solid white; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease; box-shadow: 0 2px 5px rgba(0,0,0,0.2); }
-        .theme-btn:hover { transform: scale(1.15); box-shadow: 0 4px 10px rgba(0,0,0,0.3); }
-
-        .theme-btn[data-theme="default"] { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); }
-        .theme-btn[data-theme="green"] { background: linear-gradient(135deg, #2AF598 0%, #009EFD 100%); }
-        .theme-btn[data-theme="orange"] { background: linear-gradient(135deg, #F6D365 0%, #FDA085 100%); }
-        .theme-btn[data-theme="pink"] { background: linear-gradient(135deg, #F093FB 0%, #F5576C 100%); }
-        .logout-btn {
-            position: absolute; top: 15px; right: 15px; z-index: 10;
-            background-color: #ffffff; color: #333333; border: 1px solid #e0e0e0;
-            border-radius: 20px; padding: 8px 16px; text-decoration: none; font-size: 0.85rem; font-weight: bold;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); transition: all 0.2s ease; display: flex; align-items: center; gap: 5px;
-        }
-        .logout-btn:hover { background-color: #f2f2f2; transform: translateY(-2px); box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); }
-
-        @media (max-width: 480px) {
-            body { padding: 5px; }
-            .container { height: calc(100vh - 10px); }
-            .header { padding: 20px; display: flex; flex-direction: column; align-items: center; }
-            .header h1 { font-size: 1.6rem; }
-            .header .subtitle { font-size: 0.9rem; }
-            .logout-btn { position: static; display: inline-flex; margin: 10px auto; }
-            .settings-indicator { position: static; margin-top: 10px; justify-content: center; }
-            .chat-input-container { padding: 15px; }
-            .chat-input-box { flex-direction: column; align-items: stretch; }
-            .send-btn { justify-content: center; padding: 12px; }
-            .settings-update-notification { position: fixed; top: auto; bottom: 20px; right: 20px; left: 20px; }
-            .comment-btn { position: static; margin-top: 15px; }
-        }
-        /* --- ダークモード用スタイル定義 --- */
-:root {
-    --bg-overlay: rgba(255, 255, 255, 0.98);
-    --text-main: #333;
-    --panel-bg: white;
-    --input-bg: white;
-    --input-border: #e9ecef;
-    --bot-msg-bg: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
-    --bot-msg-text: #333;
-}
-
-body.dark-mode {
-    /* 全体の背景を暗い色に固定(テーマ変更よりも優先されます) */
-    background: #1a1a2e !important;
-    --bg-overlay: rgba(30, 30, 40, 0.98);
-    --text-main: #e0e0e0;
-    --panel-bg: #2d2d3a;
-    --input-bg: #404050;
-    --input-border: #555;
-    --bot-msg-bg: linear-gradient(135deg, #3a3a4a 0%, #2b2b3b 100%);
-    --bot-msg-text: #e0e0e0;
-}
-
-/* ダークモード時の要素ごとの上書き設定 */
-body.dark-mode .container {
-    background: var(--bg-overlay);
-    box-shadow: 0 30px 60px rgba(0, 0, 0, 0.5);
-}
-
-body.dark-mode .chat-container,
-body.dark-mode .chat-input-container,
-body.dark-mode .modal-content {
-    background: var(--panel-bg);
-    color: var(--text-main);
-}
-
-body.dark-mode .message-content {
-    color: inherit;
-}
-
-body.dark-mode .message.bot {
-    background: var(--bot-msg-bg);
-    color: var(--bot-msg-text);
-    border-left-color: #667eea;
-}
-
-body.dark-mode .chat-input,
-body.dark-mode .modal textarea {
-    background: var(--input-bg);
-    border-color: var(--input-border);
-    color: var(--text-main);
-}
-
-body.dark-mode .chat-input-container {
-    border-top-color: var(--input-border);
-}
-
-/* ダークモード切り替えボタンのスタイル */
-.dark-mode-toggle {
-    position: absolute;
-    top: 15px;
-    right: 200px;
-    background: white;
-    color: #333;
-    border: none;
-    border-radius: 50%;
-    width: 35px;
-    height: 35px;
-    font-size: 1.2rem;
-    cursor: pointer;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.3s;
-    z-index: 20;
-}
-body.dark-mode .dark-mode-toggle {
-    background: #444;
-    color: #ffd700; /* 月の色 */
-}
-/* スマホ対応 */
-@media (max-width: 480px) {
-    .dark-mode-toggle {
-        position: static;
-        margin: 10px auto;
-        width: 40px; 
-        height: 40px;
-    }
-}
-    </style>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <div class="header">
+        <div class="container client-view"></div>
         <button id="darkModeBtn" class="dark-mode-toggle" title="ダークモード切替">🌙</button>
         <a href="/logout" class="logout-btn">🚪 ログアウト</a>
         <button id="openCommentModalBtn" class="comment-btn">✉️ 回答への意見・要望</button>
